--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,7 @@ footer {
 }
 
 input[type="text"], input[type="number"], select {
-    background-color: transparent; /* Transparent background */
-    border: 2px solid #dcdcdc; /* Grey border */
+    background-color: transparent;
     border-radius: 5px; /* Rounded corners */
     padding: 10px; /* Padding inside the input */
     font-size: 14px; /* Font size */
