--- a/styles.css
+++ b/styles.css
@@ -49,4 +49,5 @@ footer {
     font-size: 16px;
     width: 100%; /* Full width */
     text-align: right; /* Align text to the right */
+    height: 40px;
 }
