--- a/styles.css
+++ b/styles.css
@@ -50,4 +50,5 @@ footer {
     width: 100%; /* Full width */
     text-align: right; /* Align text to the right */
     height: 40px;
+    margin-bottom: 10px;
 }
