--- a/styles.css
+++ b/styles.css
@@ -44,11 +44,11 @@ footer {
 .label-input {
     background-color: transparent; /* Transparent background */
     border: none; /* No border */
-    color: white; /* White text */
+    color: whitespace; /* White text */
     font-weight: bold;
     font-size: 16px;
     width: 100%; /* Full width */
     text-align: right; /* Align text to the right */
     height: 40px;
-    margin-bottom: 12px;
+    margin-bottom: 16px;
 }
